--- a/src/index.html
+++ b/src/index.html
@@ -228,10 +228,51 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="networks">
+            <div class="networks__body container">
+                <h2 class="networks__heading title">
+                    Empowering<br class="smartphone-only"> Dealer Networks
+                </h2>
+                <div class="networks__description">
+                    Joint catalog usage ensures data relevance in Dealer Networks without the hassle of manual tracking
+                </div>
+                <div class="networks__content">
+                    <div class="networks__section">
+                        <h3 class="networks__sub-heading">
+                            Catalog sharing for wide<br class="desktop-only"> dealers networks
+                        </h3>
+                        <ul class="networks__features list list--simpler">
+                            <li class="list__item">Provide your dealers with a ready-to-sell tool packed with your products</li>
+                            <li class="list__item">Collect the real-time product sales analytics in a dealer netwok</li>
+                            <li class="list__item">Ensure the product data is always up-to-date for everyone in your dealer network</li>
+                        </ul>
+                    </div>
+                    <div class="networks__section">
+                        <h3 class="networks__sub-heading">
+                            Instant access to catalogs<br class="desktop-only"> from a&nbsp;variety of&nbsp;suppliers
+                        </h3>
+                        <ul class="networks__features list list--simpler">
+                            <li class="list__item">Take and use products directly through the suppliers' catalogs, promos, pricelists, or quotations</li>
+                            <li class="list__item">Handle comprehensive and always up-to-date product data</li>
+                            <li class="list__item">Combine and re-share product sets with partners and customers using simple drag-n-drop</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="networks__stage container container--wide">
+                <div class="networks__preview">
+                    <video class="networks__illustration" width="588" autoplay muted playsinline loop>
+                        <!-- <source src="content/networks.webm" type="video/webm">-->
+                        <source src="content/networks.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </section>
+
         <section>
-            <br>
-            <br>
-            <br>
+
             <br>
             <br>
             TODO:Rocket section
@@ -246,16 +287,12 @@
                 Sharing Sales Boosters
             </h2>
             <div class="sharing__body">
-                <picture>
-                    <source srcset="content/sharing@2x.avif 2x, content/sharing.avif" type="image/avif">
-                    <img class="sharing__illustration animation animation--fade"
-                         srcset="content/sharing@2x.jpg"
-                         src="content/sharing.jpg"
-                         width="513"
-                         height="342"
-                         alt=""
-                    >
-                </picture>
+                <div class="sharing__preview">
+                    <video class="sharing__illustration" width="588" autoplay muted playsinline loop>
+                        <!-- <source src="content/sharing.webm" type="video/webm">-->
+                        <source src="content/sharing.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="sharing__description wysiwyg">
                     <p>Share promotions, sales pitches and key selling points, unique selling propositions and experts chat channel attached to the product.</p>
                     <p>This isn't just about sharing data — it's about turning product information into a dynamic sales toolkit, providing dealers with everything they need for effective representation and successful sales.</p>
@@ -268,11 +305,12 @@
                     Combine →&nbsp;Tune →&nbsp;Share
                 </h2>
                 <div class="catalog__body">
-                    <!-- poster="content/catalog@2x.jpg" -->
-                    <video class="catalog__illustration" width="530" autoplay muted playsinline loop>
-<!--                        <source src="content/catalog.webm" type="video/webm">-->
-                        <source src="content/catalog.mp4" type="video/mp4">
-                    </video>
+                    <div class="catalog__preview">
+                        <video class="catalog__illustration" width="530" autoplay muted playsinline loop>
+                            <!-- <source src="content/catalog.webm" type="video/webm">-->
+                            <source src="content/catalog.mp4" type="video/mp4">
+                        </video>
+                    </div>
                     <div class="catalog__description wysiwyg">
                         <p>Combine new sets of products using many suppliers catalogs, price lists, promotions, commercial proposals – and share them with your partners. Make it as easy as you share music tracks on cloud services – combining them into ‘playlists', tuning it, and sharing with friends.</p>
                         <p>The dynamic data model allows you to forget about the need to update products: they will be continuously updated by the supplier.</p>
