--- a/src/index.html
+++ b/src/index.html
@@ -374,20 +374,22 @@
                         </div>
                     </div>
                     <div class="sales__preview">
-                        <picture>
-                            <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
-                            <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.webp 2x, content/sales-smartphone.webp" type="image/webp">
-                            <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
-                            <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
-                            <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.webp 2x, content/sales-desktop.webp" type="image/webp">
-                            <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.png 2x, content/sales-desktop.png">
-                            <img class="sales__illustration"
-                                 src="content/sales-desktop.png"
-                                 width="702"
-                                 height="678"
-                                 alt=""
-                            >
-                        </picture>
+                        <div class="sales__media">
+                            <picture>
+                                <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
+                                <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.webp 2x, content/sales-smartphone.webp" type="image/webp">
+                                <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
+                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
+                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.webp 2x, content/sales-desktop.webp" type="image/webp">
+                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.png 2x, content/sales-desktop.png">
+                                <img class="sales__illustration"
+                                     src="content/sales-desktop.png"
+                                     width="762"
+                                     height="696"
+                                     alt=""
+                                >
+                            </picture>
+                        </div>
                     </div>
                 </div>
             </div>
