--- a/src/index.html
+++ b/src/index.html
@@ -122,11 +122,7 @@
             </div>
         </div>
 
-        #how-it-works
-
-
-
-        <section class="truth">
+        <section class="truth" id="how-it-works">
             <div class="truth__wrap container">
                 <h2 class="truth__heading title">
                     Life-Connected source of truth
