--- a/src/index.html
+++ b/src/index.html
@@ -266,18 +266,34 @@
                 </div>
             </div>
         </section>
-
-        <section>
-
-            <br>
-            <br>
-            TODO:Rocket section
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-        </section>
+        <div class="start">
+            <div class="start__wrap container">
+                <div class="start__body">
+                    <div class="start__section">
+                        <b class="start__sub-heading">
+                            Easy start for Distributor
+                        </b>
+                        <div class="start__description">
+                            Connect an existing data source or create a<br class="desktop-only"> product set. Personalise it and share with<br class="desktop-only"> dealers in an interactive way.
+                        </div>
+                    </div>
+                    <div class="start__section">
+                        <b class="start__sub-heading">
+                            Easier launch for Dealers
+                        </b>
+                        <div class="start__description">
+                            Join your supplier's ready-to-use catalog in one<br class="desktop-only"> click. No API needed, no coding, no file-parsing,<br class="desktop-only"> no set-up: just choose and sell.
+                        </div>
+                    </div>
+                </div>
+                <div class="start__footer">
+                    <a class="button mfp-handler" href="#demo">
+                        Start Now
+                    </a>
+                </div>
+                <img class="start__rocket" src="content/start.png" width="192" height="324" alt="">
+            </div>
+        </div>
         <section class="sharing container">
             <h2 class="sharing__heading title">
                 Sharing Sales Boosters
