--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                         Shared Catalogs &&nbsp;Automated Offers
                     </div>
                     <div class="hero__description">
-                        Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.
+                        Quotalogic is a tool that enables dealers to effectively manage commercial proposals, sourcing products and sales insights directly from suppliers' catalogs.
                     </div>
                     <div class="hero__submit shadow">
                         <a class="button mfp-handler" href="#demo">Book a demo</a>
@@ -86,39 +86,7 @@
                 </div>
             </div>
             <div class="hero__summary">
-                <h2 class="visuallyhidden">Features</h2>
-                <div class="hero__summary-wrap container">
-                    <div class="hero__panel">
-                        <div class="hero__column">
-                            <h3 class="hero__sub-heading">
-                                Catalog sharing for wide dealers networks
-                            </h3>
-                            <ul class="hero__features-list list">
-                                <li class="list__item">The fastest way to give products to the supply chain</li>
-                                <li class="list__item">Actual data and effective sales tools for dealers</li>
-                            </ul>
-                        </div>
-                        <div class="hero__column">
-                            <h3 class="hero__sub-heading">
-                                An instant access to multiple suppliers catalogs
-                            </h3>
-                            <ul class="hero__features-list list">
-                                <li class="list__item">Take and use any products of many suppliers directly from their catalogues or even from promos, pricelists and quotations</li>
-                                <li class="list__item">Combine and re-share product sets with partners and customers by simple drag-n-drop</li>
-                            </ul>
-                        </div>
-                        <div class="hero__column">
-                            <h3 class="hero__sub-heading">
-                                A fastest and easiest quotation tool
-                            </h3>
-                            <ul class="hero__features-list list">
-                                <li class="list__item">Full and always actual multiple suppliers’ product data.</li>
-                                <li class="list__item">AI-automated compilation of quotes.</li>
-                                <li class="list__item">No CRM and PIM deployment. No API needed, no coding, no file-parsing, no set-up: just choose-and-sell</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
 
