--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
         </header>
         <div class="hero">
             <div class="hero__head">
-                <div class="hero__head-wrap container">
+                <div class="hero__wrap container">
                     <div class="hero__pre-heading">
                         Streamlined eCommerce:
                     </div>
@@ -84,9 +84,6 @@
                         <a class="button mfp-handler" href="#demo">Book a demo</a>
                     </div>
                 </div>
-            </div>
-            <div class="hero__summary">
-
             </div>
         </div>
 
