truth draft and badges removal

--- a/src/index.html
+++ b/src/index.html
@@ -86,106 +86,103 @@
                 </div>
             </div>
         </div>
-
         <section class="truth" id="how-it-works">
             <div class="truth__wrap container">
                 <h2 class="truth__heading title">
-                    Life-Connected source of truth
+                    Life-Connected<br class="desktop-only"> source of truth
                 </h2>
                 <div class="truth__description">
                     Using a single product image across the dealer network facilitates
                     the&nbsp;collection and generation of rich Collaborative Dealer Network Content:
                 </div>
-                <div class="truth__body">
-                    <div class="truth__preview">
-                        <picture>
-                            <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
-                            <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
-                            <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.avif 2x, content/truth-desktop.avif" type="image/avif">
-                            <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.jpg 2x, content/truth-desktop.jpg">
-                            <img class="truth__illustration"
-                                 src="content/truth-desktop.jpg"
-                                 width="509"
-                                 height="570"
-                                 alt=""
-                            >
-                        </picture>
-                    </div>
-                    <div class="truth__content">
-                        <div class="truth__list hide-scrollbar">
-                            <div class="feature">
-                                MSR Price
-                            </div>
-                            <span class="feature">
-                                Net Price
-                            </span>
-                            <span class="feature">
-                                Street Price
-                                <span class="feature__tag badge badge--stats">
-                                    Stats’ adjusted
-                                </span>
-                            </span>
-                            <span class="feature">
-                                Price tiering
-                            </span>
-                            <!-- Дублируем этот айтем чтобы немного изменить порядок-->
-                            <span class="feature feature--pointed smartphone-only" role="presentation" aria-hidden="true">
-                                Images
-                            </span>
-                            <span class="feature">
-                                Description
-                                <span class="feature__tag badge badge--ai">
-                                    AI-Powered
-                                </span>
-                                <span class="feature__tag badge badge--dealers">
-                                    Dealers-Curated
-                                </span>
-                            </span>
-                            <span class="feature feature--pointed desktop-only">
-                                Images
-                            </span>
-                            <span class="feature">
-                                Sales pitches
-                            </span>
-                            <span class="feature">
-                                Key selling points
-                                <span class="feature__tag badge badge--ai">
-                                    AI-Powered
-                                </span>
-                            </span>
-                            <span class="feature">
-                                Unique selling propositions
-                            </span>
-                            <span class="feature">
-                                Stock availability
-                            </span>
-                            <span class="feature">
-                                Task-Fit Tips
-                                <span class="feature__tag badge badge--ai">
-                                    AI-Powered
-                                </span>
-                                <span class="feature__tag badge badge--dealers">
-                                    Dealers-Curated
-                                </span>
-                            </span>
-                            <span class="feature">
-                                Product portfolio
-                                <span class="feature__tag badge badge--dealers">
-                                    Dealers-Curated
-                                </span>
-                            </span>
-                            <span class="feature">
-                                User-Generated Content
-                            </span>
-                            <span class="feature">
-                                Chat with product experts
-                            </span>
-                            <span class="feature">
-                                Any custom data
-                                <span class="feature__sparkles">✨</span>
-                            </span>
+                <div class="truth__content">
+                    <div class="truth__list hide-scrollbar">
+                        <div class="feature">
+                            MSR Price
                         </div>
+                        <span class="feature">
+                            Net Price
+                        </span>
+                        <span class="feature">
+                            Street Price
+                            <span class="feature__tag badge">
+                                Stats’ adjusted
+                            </span>
+                        </span>
+                        <span class="feature">
+                            Price tiering
+                        </span>
+                        <!-- Дублируем этот айтем чтобы немного изменить порядок-->
+                        <span class="feature feature--pointed smartphone-only" role="presentation" aria-hidden="true">
+                            Images
+                        </span>
+                        <span class="feature">
+                            Description
+                            <span class="feature__tag badge">
+                                AI-Powered
+                            </span>
+                            <span class="feature__tag badge">
+                                Dealers-Curated
+                            </span>
+                        </span>
+                        <span class="feature feature--pointed desktop-only">
+                            Images
+                        </span>
+                        <span class="feature">
+                            Sales pitches
+                        </span>
+                        <span class="feature">
+                            Key selling points
+                            <span class="feature__tag badge">
+                                AI-Powered
+                            </span>
+                        </span>
+                        <span class="feature">
+                            Unique selling propositions
+                        </span>
+                        <span class="feature">
+                            Stock availability
+                        </span>
+                        <span class="feature">
+                            Task-Fit Tips
+                            <span class="feature__tag badge">
+                                AI-Powered
+                            </span>
+                            <span class="feature__tag badge">
+                                Dealers-Curated
+                            </span>
+                        </span>
+                        <span class="feature">
+                            Product portfolio
+                            <span class="feature__tag badge">
+                                Dealers-Curated
+                            </span>
+                        </span>
+                        <span class="feature">
+                            User-Generated Content
+                        </span>
+                        <span class="feature">
+                            Chat with product experts
+                        </span>
+                        <span class="feature">
+                            Any custom data
+                            <span class="feature__sparkles">✨</span>
+                        </span>
                     </div>
+                </div>
+                <div class="truth__preview">
+                    <picture>
+                        <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
+                        <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
+                        <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.avif 2x, content/truth-desktop.avif" type="image/avif">
+                        <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.jpg 2x, content/truth-desktop.jpg">
+                        <img class="truth__illustration"
+                             src="content/truth-desktop.jpg"
+                             width="509"
+                             height="570"
+                             alt=""
+                        >
+                    </picture>
                 </div>
             </div>
         </section>
