truth second draft

--- a/src/markups/_feature.html
+++ b/src/markups/_feature.html
@@ -61,7 +61,7 @@
             <br>
             <h2>.feature--pointed</h2>
 
-            <span class="feature feature--pointed">
+            <span class="feature feature--guy">
                 Images
             </span>
 
