--- a/src/index.html
+++ b/src/index.html
@@ -97,9 +97,9 @@
                 </div>
                 <div class="truth__content">
                     <div class="truth__list hide-scrollbar">
-                        <div class="feature">
+                        <span class="feature">
                             MSR Price
-                        </div>
+                        </span>
                         <span class="feature">
                             Net Price
                         </span>
@@ -112,10 +112,6 @@
                         <span class="feature">
                             Price tiering
                         </span>
-                        <!-- Дублируем этот айтем чтобы немного изменить порядок-->
-                        <span class="feature feature--pointed smartphone-only" role="presentation" aria-hidden="true">
-                            Images
-                        </span>
                         <span class="feature">
                             Description
                             <span class="feature__tag badge">
@@ -125,7 +121,7 @@
                                 Dealers-Curated
                             </span>
                         </span>
-                        <span class="feature feature--pointed desktop-only">
+                        <span class="feature">
                             Images
                         </span>
                         <span class="feature">
@@ -152,7 +148,7 @@
                                 Dealers-Curated
                             </span>
                         </span>
-                        <span class="feature">
+                        <span class="feature feature--guy">
                             Product portfolio
                             <span class="feature__tag badge">
                                 Dealers-Curated
@@ -164,7 +160,7 @@
                         <span class="feature">
                             Chat with product experts
                         </span>
-                        <span class="feature">
+                        <span class="feature feature--girl">
                             Any custom data
                             <span class="feature__sparkles">✨</span>
                         </span>
