truth third draft

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,10 @@
                         <span class="feature">
                             Price tiering
                         </span>
+                        <!-- Дублируем этот элемент, чтобы немного изменить порядок на смартфоне -->
+                        <span class="feature smartphone-only" role="presentation" aria-hidden="true">
+                            Images
+                        </span>
                         <span class="feature">
                             Description
                             <span class="feature__tag badge">
@@ -121,11 +125,15 @@
                                 Dealers-Curated
                             </span>
                         </span>
-                        <span class="feature">
+                        <span class="feature desktop-only">
                             Images
                         </span>
                         <span class="feature">
                             Sales pitches
+                        </span>
+                        <!-- Дублируем этот элемент, чтобы немного изменить порядок на смартфоне -->
+                        <span class="feature smartphone-only" role="presentation" aria-hidden="true">
+                            Stock availability
                         </span>
                         <span class="feature">
                             Key selling points
@@ -136,7 +144,7 @@
                         <span class="feature">
                             Unique selling propositions
                         </span>
-                        <span class="feature">
+                        <span class="feature desktop-only">
                             Stock availability
                         </span>
                         <span class="feature">
