--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,7 @@
             <div class="networks__stage container container--wide">
                 <div class="networks__preview">
                     <video class="networks__illustration" width="588" autoplay muted playsinline loop>
-                        <!-- <source src="content/networks.webm" type="video/webm">-->
+                         <source src="content/networks.webm" type="video/webm">
                         <source src="content/networks.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -276,7 +276,7 @@
             <div class="sharing__body">
                 <div class="sharing__preview">
                     <video class="sharing__illustration" width="588" autoplay muted playsinline loop>
-                        <!-- <source src="content/sharing.webm" type="video/webm">-->
+                         <source src="content/sharing.webm" type="video/webm">
                         <source src="content/sharing.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -294,7 +294,7 @@
                 <div class="catalog__body">
                     <div class="catalog__preview">
                         <video class="catalog__illustration" width="530" autoplay muted playsinline loop>
-                            <!-- <source src="content/catalog.webm" type="video/webm">-->
+                             <source src="content/catalog.webm" type="video/webm">
                             <source src="content/catalog.mp4" type="video/mp4">
                         </video>
                     </div>
