send new message

--- a/src/index.html
+++ b/src/index.html
@@ -1088,7 +1088,7 @@
                                 Thank you for your request
                             </div>
                             <button class="inner-alert__action button button--submit" type="button">
-                                Send new massage
+                                Send another massage
                             </button>
                         </div>
                         <div class="inner-alert inner-alert--danger" style="display: none;">
@@ -1154,7 +1154,7 @@
                         Thank you for your request
                     </div>
                     <button class="inner-alert__action button button--submit" type="button">
-                        Send new massage
+                        Send another massage
                     </button>
                 </div>
                 <div class="inner-alert inner-alert--in-modal inner-alert--danger" style="display: none;">
