--- a/src/index.html
+++ b/src/index.html
@@ -176,8 +176,8 @@
                 </div>
                 <div class="truth__preview">
                     <picture>
-                        <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
-                        <source media="(max-width: 599px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
+                        <source media="(max-width: 749px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
+                        <source media="(max-width: 749px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
                         <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.avif 2x, content/truth-desktop.avif" type="image/avif">
                         <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.jpg 2x, content/truth-desktop.jpg">
                         <img class="truth__illustration"
@@ -198,6 +198,7 @@
                     Empowering<br class="smartphone-only"> Dealer Networks
                 </h2>
                 <div class="networks__description">
+                    Joint catalog usage ensures data relevance in Dealer Networks without the hassle of manual tracking
                     Joint catalog usage ensures data relevance in Dealer Networks without the hassle of manual tracking
                 </div>
                 <div class="networks__content">
@@ -363,9 +364,9 @@
                     <div class="sales__preview">
                         <div class="sales__media">
                             <picture>
-                                <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
-                                <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.webp 2x, content/sales-smartphone.webp" type="image/webp">
-                                <source media="(max-width: 599px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
+                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
+                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.webp 2x, content/sales-smartphone.webp" type="image/webp">
+                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
                                 <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
                                 <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.webp 2x, content/sales-desktop.webp" type="image/webp">
                                 <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.png 2x, content/sales-desktop.png">
@@ -444,9 +445,9 @@
                             </ul>
                         </div>
                         <picture>
-                            <source media="(max-width: 599px)" srcset="content/benefits-screenshot-b-smartphone@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
-                            <source media="(max-width: 599px)" srcset="content/benefits-screenshot-b-smartphone@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
-                            <source media="(max-width: 599px)" srcset="content/benefits-screenshot-b-smartphone@2x.png 2x, content/benefits-screenshot-b-desktop.png">
+                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
+                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.png 2x, content/benefits-screenshot-b-desktop.png">
                             <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
                             <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
                             <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.png 2x, content/benefits-screenshot-b-desktop.png">
