--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
                         </h3>
                         <ul class="networks__features list list--simpler">
                             <li class="list__item">Provide your dealers with a ready-to-sell tool packed with your products</li>
-                            <li class="list__item">Collect the real-time product sales analytics in a dealer netwok</li>
+                            <li class="list__item">Collect the real-time product sales analytics in a dealer network</li>
                             <li class="list__item">Ensure the product data is always up-to-date for everyone in your dealer network</li>
                         </ul>
                     </div>
