--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,7 @@
                             Easy start for Distributor
                         </b>
                         <div class="start__description">
-                            Connect an existing data source or create a<br class="desktop-only"> product set. Personalise it and share with<br class="desktop-only"> dealers in an interactive way.
+                            Connect an existing data source or create a&nbsp;product set. Personalise it and share with dealers in an interactive way.
                         </div>
                     </div>
                     <div class="start__section">
