--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
                         </span>
                         <span class="feature">
                             Street Price
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 Stats’ adjusted
                             </span>
                         </span>
@@ -118,10 +118,10 @@
                         </span>
                         <span class="feature">
                             Description
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 AI-Powered
                             </span>
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 Dealers-Curated
                             </span>
                         </span>
@@ -137,7 +137,7 @@
                         </span>
                         <span class="feature">
                             Key selling points
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 AI-Powered
                             </span>
                         </span>
@@ -149,16 +149,16 @@
                         </span>
                         <span class="feature">
                             Task-Fit Tips
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 AI-Powered
                             </span>
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 Dealers-Curated
                             </span>
                         </span>
                         <span class="feature feature--guy">
                             Product portfolio
-                            <span class="feature__tag badge">
+                            <span class="feature__tag">
                                 Dealers-Curated
                             </span>
                         </span>
