tariff and plan

--- a/src/index.html
+++ b/src/index.html
@@ -725,7 +725,7 @@
                                     Dealer
                                 </b>
                                 <div class="plan__price">
-                                    € 24,9/mth <span class="plan__vat">excl. VAT</span>
+                                    € 24,9/mth <span class="plan__vat">excl. VAT, per user</span>
                                 </div>
                                 <div class="plan__trial">
                                     14 days free
@@ -741,7 +741,7 @@
                                     Distributor
                                 </b>
                                 <div class="plan__price">
-                                    € 49,9/mth <span class="plan__vat">excl. VAT</span>
+                                    € 49,9/mth <span class="plan__vat">excl. VAT, per user</span>
                                 </div>
                                 <div class="plan__trial">
                                     14 days free
