--- a/src/index.html
+++ b/src/index.html
@@ -314,6 +314,9 @@
                 <div class="sales__description">
                     Streamline your proposal process like never before in a Quote Management System:
                 </div>
+                <div class="sales__video">
+                    <iframe class="sales__iframe" width="560" height="315" src="https://www.youtube.com/embed/RxHvLXckzns?si=RyZcfyRlP7XknPVA" frameborder="0" allowfullscreen></iframe>
+                </div>
                 <div class="sales__body">
                     <div class="sales__content">
                         <div class="sales__list">
