--- a/src/index.html
+++ b/src/index.html
@@ -315,7 +315,7 @@
                     Streamline your proposal process like never before in a Quote Management System:
                 </div>
                 <div class="sales__video">
-                    <iframe class="sales__iframe" width="560" height="315" src="https://www.youtube.com/embed/RxHvLXckzns?si=RyZcfyRlP7XknPVA" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="sales__iframe" src="https://www.youtube.com/embed/jT0ZZKZ93P8?si=ZalhNnX3RxSqvm6W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="sales__body">
                     <div class="sales__content">
