--- a/src/index.html
+++ b/src/index.html
@@ -1156,6 +1156,9 @@
                     <div class="inner-alert__heading">
                         Thank you for your request
                     </div>
+                    <div class="inner-alert__description">
+                        We will contact you within one business day.
+                    </div>
                     <button class="inner-alert__action button button--submit" type="button">
                         Send another massage
                     </button>
