how it works link

--- a/src/index.html
+++ b/src/index.html
@@ -86,9 +86,9 @@
                 </div>
             </div>
         </div>
-        <section class="truth" id="how-it-works">
+        <section class="truth">
             <div class="truth__wrap container">
-                <h2 class="truth__heading title">
+                <h2 class="truth__heading title" id="how-it-works">
                     Life-Connected<br class="desktop-only"> source of truth
                 </h2>
                 <div class="truth__description">
