--- a/src/quotalogic.io/index.html
+++ b/src/quotalogic.io/index.html
@@ -32,14 +32,14 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="../global/styles/style.css">
 
         <!-- Favicons -->
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#0B80BE">
+        <link rel="apple-touch-icon" sizes="180x180" href="../global/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../global/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../global/favicon/favicon-16x16.png">
+        <link rel="manifest" href="../global/site.webmanifest">
+        <link rel="mask-icon" href="../global/favicon/safari-pinned-tab.svg" color="#0B80BE">
         <meta name="msapplication-TileColor" content="#FFFFFF">
         <meta name="theme-color" content="#FFFFFF">
 
@@ -203,12 +203,12 @@
                 </div>
                 <div class="truth__preview">
                     <picture>
-                        <source media="(max-width: 749px)" srcset="content/truth-smartphone@2x.avif 2x, content/truth-smartphone.avif" type="image/avif">
-                        <source media="(max-width: 749px)" srcset="content/truth-smartphone@2x.jpg 2x, content/truth-smartphone.jpg">
-                        <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.avif 2x, content/truth-desktop.avif" type="image/avif">
-                        <source media="(min-width: 600px)" srcset="content/truth-desktop@2x.jpg 2x, content/truth-desktop.jpg">
+                        <source media="(max-width: 749px)" srcset="../global/content/truth-smartphone@2x.avif 2x, ../global/content/truth-smartphone.avif" type="image/avif">
+                        <source media="(max-width: 749px)" srcset="../global/content/truth-smartphone@2x.jpg 2x, ../global/content/truth-smartphone.jpg">
+                        <source media="(min-width: 600px)" srcset="../global/content/truth-desktop@2x.avif 2x, ../global/content/truth-desktop.avif" type="image/avif">
+                        <source media="(min-width: 600px)" srcset="../global/content/truth-desktop@2x.jpg 2x, ../global/content/truth-desktop.jpg">
                         <img class="truth__illustration"
-                             src="content/truth-desktop.jpg"
+                             src="../global/content/truth-desktop.jpg"
                              width="644"
                              height="541"
                              alt=""
@@ -253,8 +253,8 @@
             <div class="networks__stage container container--wide">
                 <div class="networks__preview">
                     <video class="networks__illustration" width="1360" autoplay muted playsinline loop>
-                         <source src="content/networks.webm" type="video/webm">
-                        <source src="content/networks.mp4" type="video/mp4">
+                         <source src="../global/content/networks.webm" type="video/webm">
+                        <source src="../global/content/networks.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -285,10 +285,10 @@
                     </a>
                 </div>
                 <picture>
-                    <source srcset="content/start@2x.avif 2x, content/start.avif" type="image/avif">
+                    <source srcset="../global/content/start@2x.avif 2x, ../global/content/start.avif" type="image/avif">
                     <img class="start__rocket"
-                         srcset="content/start@2x.png 2x"
-                         src="content/start.png"
+                         srcset="../global/content/start@2x.png 2x"
+                         src="../global/content/start.png"
                          width="192"
                          height="324"
                          alt=""
@@ -303,8 +303,8 @@
             <div class="sharing__body">
                 <div class="sharing__preview">
                     <video class="sharing__illustration" width="588" autoplay muted playsinline loop>
-                         <source src="content/sharing.webm" type="video/webm">
-                        <source src="content/sharing.mp4" type="video/mp4">
+                         <source src="../global/content/sharing.webm" type="video/webm">
+                        <source src="../global/content/sharing.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="sharing__description wysiwyg">
@@ -321,8 +321,8 @@
                 <div class="catalog__body">
                     <div class="catalog__preview">
                         <video class="catalog__illustration" width="530" autoplay muted playsinline loop>
-                             <source src="content/catalog.webm" type="video/webm">
-                            <source src="content/catalog.mp4" type="video/mp4">
+                             <source src="../global/content/catalog.webm" type="video/webm">
+                            <source src="../global/content/catalog.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="catalog__description wysiwyg">
@@ -393,14 +393,14 @@
                     <div class="sales__preview">
                         <div class="sales__media">
                             <picture>
-                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.avif 2x, content/sales-smartphone.avif" type="image/avif">
-                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.webp 2x, content/sales-smartphone.webp" type="image/webp">
-                                <source media="(max-width: 749px)" srcset="content/sales-smartphone@2x.png 2x, content/sales-smartphone.png">
-                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.avif 2x, content/sales-desktop.avif" type="image/avif">
-                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.webp 2x, content/sales-desktop.webp" type="image/webp">
-                                <source media="(min-width: 600px)" srcset="content/sales-desktop@2x.png 2x, content/sales-desktop.png">
+                                <source media="(max-width: 749px)" srcset="../global/content/sales-smartphone@2x.avif 2x, ../global/content/sales-smartphone.avif" type="image/avif">
+                                <source media="(max-width: 749px)" srcset="../global/content/sales-smartphone@2x.webp 2x, ../global/content/sales-smartphone.webp" type="image/webp">
+                                <source media="(max-width: 749px)" srcset="../global/content/sales-smartphone@2x.png 2x, ../global/content/sales-smartphone.png">
+                                <source media="(min-width: 600px)" srcset="../global/content/sales-desktop@2x.avif 2x, ../global/content/sales-desktop.avif" type="image/avif">
+                                <source media="(min-width: 600px)" srcset="../global/content/sales-desktop@2x.webp 2x, ../global/content/sales-desktop.webp" type="image/webp">
+                                <source media="(min-width: 600px)" srcset="../global/content/sales-desktop@2x.png 2x, ../global/content/sales-desktop.png">
                                 <img class="sales__illustration"
-                                     src="content/sales-desktop.png"
+                                     src="../global/content/sales-desktop.png"
                                      width="762"
                                      height="696"
                                      alt=""
@@ -448,12 +448,12 @@
                             </ul>
                         </div>
                         <picture>
-                            <source media="(max-width: 600px)" srcset="content/benefits-screenshot-a-smartphone@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
-                            <source media="(max-width: 600px)" srcset="content/benefits-screenshot-a-smartphone@2x.jpg 2x, content/benefits-screenshot-a-desktop.jpg">
-                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-a-desktop@2x.avif 2x, content/benefits-screenshot-a-desktop.avif" type="image/avif">
-                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-a-desktop@2x.jpg 2x, content/benefits-screenshot-a-desktop.jpg">
+                            <source media="(max-width: 600px)" srcset="../global/content/benefits-screenshot-a-smartphone@2x.avif 2x, ../global/content/benefits-screenshot-a-desktop.avif" type="image/avif">
+                            <source media="(max-width: 600px)" srcset="../global/content/benefits-screenshot-a-smartphone@2x.jpg 2x, ../global/content/benefits-screenshot-a-desktop.jpg">
+                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-a-desktop@2x.avif 2x, ../global/content/benefits-screenshot-a-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-a-desktop@2x.jpg 2x, ../global/content/benefits-screenshot-a-desktop.jpg">
                             <img class="benefits__screenshot"
-                                 src="content/benefits-screenshot-a-desktop.jpg"
+                                 src="../global/content/benefits-screenshot-a-desktop.jpg"
                                  width="622"
                                  height="466"
                                  alt=""
@@ -474,14 +474,14 @@
                             </ul>
                         </div>
                         <picture>
-                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
-                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
-                            <source media="(max-width: 749px)" srcset="content/benefits-screenshot-b-smartphone@2x.png 2x, content/benefits-screenshot-b-desktop.png">
-                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.avif 2x, content/benefits-screenshot-b-desktop.avif" type="image/avif">
-                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.webp 2x, content/benefits-screenshot-b-desktop.webp" type="image/webp">
-                            <source media="(min-width: 600px)" srcset="content/benefits-screenshot-b-desktop@2x.png 2x, content/benefits-screenshot-b-desktop.png">
+                            <source media="(max-width: 749px)" srcset="../global/content/benefits-screenshot-b-smartphone@2x.avif 2x, ../global/content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(max-width: 749px)" srcset="../global/content/benefits-screenshot-b-smartphone@2x.webp 2x, ../global/content/benefits-screenshot-b-desktop.webp" type="image/webp">
+                            <source media="(max-width: 749px)" srcset="../global/content/benefits-screenshot-b-smartphone@2x.png 2x, ../global/content/benefits-screenshot-b-desktop.png">
+                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-b-desktop@2x.avif 2x, ../global/content/benefits-screenshot-b-desktop.avif" type="image/avif">
+                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-b-desktop@2x.webp 2x, ../global/content/benefits-screenshot-b-desktop.webp" type="image/webp">
+                            <source media="(min-width: 600px)" srcset="../global/content/benefits-screenshot-b-desktop@2x.png 2x, ../global/content/benefits-screenshot-b-desktop.png">
                             <img class="benefits__screenshot"
-                                 src="content/benefits-screenshot-b-desktop.png"
+                                 src="../global/content/benefits-screenshot-b-desktop.png"
                                  width="622"
                                  height="466"
                                  alt=""
@@ -596,10 +596,10 @@
                     </div>
                     <div class="basics__preview">
                         <picture>
-                            <source srcset="content/basics-meaning@2x.avif 2x, content/basics-meaning.avif" type="image/avif">
+                            <source srcset="../global/content/basics-meaning@2x.avif 2x, ../global/content/basics-meaning.avif" type="image/avif">
                             <img class="basics__illustration"
-                                 srcset="content/basics-meaning@2x.jpg 2x"
-                                 src="content/basics-meaning.jpg"
+                                 srcset="../global/content/basics-meaning@2x.jpg 2x"
+                                 src="../global/content/basics-meaning.jpg"
                                  width="704"
                                  height="352"
                                  alt=""
@@ -616,10 +616,10 @@
                     </div>
                     <div class="basics__preview">
                         <picture>
-                            <source srcset="content/basics-integrations@2x.avif 2x, content/basics-integrations.avif" type="image/avif">
+                            <source srcset="../global/content/basics-integrations@2x.avif 2x, ../global/content/basics-integrations.avif" type="image/avif">
                             <img class="basics__illustration"
-                                 srcset="content/basics-integrations@2x.jpg 2x"
-                                 src="content/basics-integrations.jpg"
+                                 srcset="../global/content/basics-integrations@2x.jpg 2x"
+                                 src="../global/content/basics-integrations.jpg"
                                  width="435"
                                  height="337"
                                  alt=""
@@ -646,8 +646,8 @@
                     </div>
                     <div class="basics__preview">
                         <video class="basics__video" autoplay muted playsinline loop>
-                            <source src="content/basics-omnichanelling.webm" type="video/webm">
-                            <source src="content/basics-omnichanelling.mp4" type="video/mp4">
+                            <source src="../global/content/basics-omnichanelling.webm" type="video/webm">
+                            <source src="../global/content/basics-omnichanelling.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -1211,9 +1211,9 @@
             </div>
         </div>
 
-        <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
-        <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
-        <script src="scripts/scripts.js"></script>
+        <script src="../global/vendors/jquery/jquery-3.7.0.min.js"></script>
+        <script src="../global/vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+        <script src="../global/scripts/scripts.js"></script>
 
 
     </body>
