agreements and cookies

--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/WebPage">
+<html lang="ru" itemscope itemtype="http://schema.org/WebPage">
     <head>
 
         <!-- Cookies and agreements -->
@@ -8,7 +8,35 @@
         <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
         <script type="text/javascript">
             var _iub = _iub || [];
-            _iub.csConfiguration = {"askConsentAtCookiePolicyUpdate":true,"countryDetection":true,"enableFadp":true,"enableLgpd":true,"enableUspr":true,"lang":"en","perPurposeConsent":true,"siteId":3317205,"cookiePolicyId":50692671,"i18n":{"en":{"banner":{"title":"Cookies and Privacy Policy Notice"}}}, "banner":{ "acceptButtonColor":"#3982E4","acceptButtonDisplay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"explicitWithdrawal":true,"listPurposes":true,"position":"float-bottom-right","rejectButtonColor":"#3982E4","rejectButtonDisplay":true }};
+            _iub.csConfiguration = {
+                "askConsentAtCookiePolicyUpdate": true,
+                "countryDetection": true,
+                "enableFadp": true,
+                "enableLgpd": true,
+                "enableUspr": true,
+                "lang": "ru",
+                "perPurposeConsent": true,
+                "siteId": 3317205,
+                "cookiePolicyId": 50692671,
+                "i18n": {
+                    "ru": {
+                        "banner": {
+                            "title": "Уведомление о политике конфиденциальности и файлах cookie"
+                        }
+                    }
+                },
+                "banner": {
+                    "acceptButtonColor": "#3982E4",
+                    "acceptButtonDisplay": true,
+                    "closeButtonDisplay": false,
+                    "customizeButtonDisplay": true,
+                    "explicitWithdrawal": true,
+                    "listPurposes": true,
+                    "position": "float-bottom-right",
+                    "rejectButtonColor": "#3982E4",
+                    "rejectButtonDisplay": true
+                }
+            };
         </script>
         <script>
             (function (w, d) {
